Name:                ptrader
Version:             0.1.0
Synopsis:            Personal Stock Trader Toolbox
Description:         Personal Stock Trader Toolbox
License:             GPL-3
License-file:        LICENSE
Author:              Luis Cabellos
Maintainer:          zhen.sydow@gmail.com
Copyright:           (c) 2011 Luis Cabellos
Category:            Data
Build-type:          Simple
Cabal-version:       >=1.10

-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:  


Library
  Hs-source-dirs:  src
  Default-language:    Haskell2010
  Exposed-modules:     PTrader.Query
  Build-depends:       base==4.3.*,
                       split==0.1.*,
                       curl==1.3.*
  
  -- Modules not exported by this package.
  -- Other-modules:       
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         
  