Name:                ptrader
Version:             0.1.0
Synopsis:            Personal Stock Trader Toolbox
Description:         Personal Stock Trader Toolbox. PTrader provides a Stock Trader framework. It allows to get real time stock info from finances.yahoo.com and pretty-print the results on a terminal.

License:             GPL-3
License-file:        LICENSE
Author:              Luis Cabellos
Maintainer:          zhen.sydow@gmail.com
Copyright:           (c) 2011 Luis Cabellos
Category:            Data
Build-type:          Simple
Cabal-version:       >=1.10
Data-dir:            data
Data-files: 	     *.db

-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:  


Library
  Hs-source-dirs:  src
  Default-language:    Haskell2010
  Exposed-modules:     PTrader.Query
                       PTrader.Report
                       PTrader.Portfolio
                       PTrader.Types
                       PTrader.Util
  Other-modules:       Paths_ptrader
  Build-depends:       base==4.3.*,
                       mtl==2.0.*,
                       transformers==0.2.*,
                       directory==1.1.*,
                       time==1.2.*,
                       old-locale==1.0.*,
                       split==0.1.*,
                       curl==1.3.*,
                       ansi-terminal==0.5.*,
                       sqlite==0.5.*
  Ghc-options:         -Wall
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         
  
source-repository head
  type: git
  location: https://zhensydow@github.com/zhensydow/ptrader.git
  branch: master
